@@ -156,3 +156,7 @@ java堆用于存储对象实例，我们只要不断的创建对象，并且保�
 
 
 
+### 4.3 运行时常量池溢出
+
+异常信息：`java.lang.OutOfMemoryError:PermGenspace`
+如果要向运行时常量池中添加内容，最简单的做法就是使用String.intern()这个Native方法。该方法 的作用是：如果池中已经包含一个等于此String的字符串，则返回代表池中这个字符串的String对 象；否则，将此String对象包含的字符串添加到常量池中，并且返回此String对象的引用。由于常量 池分配在方法区内，我们可以通过-XX:PermSize和-XX:MaxPermSize限制方法区的大小，从而间接 限制其中常量池的容量
